Remove workaround for rrf pip install

--- a/notebooks/search/02-hybrid-search.ipynb
+++ b/notebooks/search/02-hybrid-search.ipynb
@@ -79,10 +79,7 @@
    },
    "outputs": [],
    "source": [
-    "!git clone https://github.com/elastic/elasticsearch-py.git\n",
-    "%cd elasticsearch-py\n",
-    "!git checkout v8.8.2\n",
-    "!{sys.executable} -m pip install .\n",
+    "!pip install elasticsearch\n",
     "!pip install sentence_transformers\n",
     "!pip install torch\n"
    ]
@@ -94,7 +91,6 @@
     "id": "gEzq2Z1wBs3M"
    },
    "source": [
-    "[TODO: Update]\n",
     "Next we need to import the `elasticsearch` module and the `getpass` module.\n",
     "`getpass` is part of the Python standard library and is used to securely prompt for credentials."
    ]
@@ -465,7 +461,7 @@
     "\n",
     "response = client.search(index=\"rrf_book_index\", body=body)\n",
     "\n",
-    "print(response)"
+    "pretty_response(response)"
    ]
   },
   {
@@ -615,7 +611,8 @@
     "    }\n",
     "}\n",
     "\n",
-    "response = client.search(index=\"example-index\", body=body)"
+    "response = client.search(index=\"example-index\", body=body)\n",
+    "pretty_response(response)"
    ]
   },
   {
