Update colab urls

--- a/notebooks/search/03-ELSER.ipynb
+++ b/notebooks/search/03-ELSER.ipynb
@@ -9,11 +9,16 @@
    "source": [
     "# Semantic Search using ELSER text expansion\n",
     "\n",
-    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/joemcelroy/elasticsearch-labs/blob/notebooks-guides/colab-notebooks-examples/search/03-ELSER.ipynb)\n",
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/elastic/elasticsearch-labs/blob/notebooks/search/03-ELSER.ipynb)\n",
     "\n",
     "\n",
     "Learn how to use the [Elastic Learned Sparse Encoder](https://www.elastic.co/guide/en/machine-learning/current/ml-nlp-elser.html) for text expansion-powered semantic search."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "attachments": {},
@@ -132,7 +137,7 @@
    "source": [
     "from elasticsearch import Elasticsearch, helpers\n",
     "from urllib.request import urlopen\n",
-    "import getpass",
+    "import getpass\n",
     "import json"
    ]
   },
