Fixes consistency in query code vs. documentation and fixes the link to the dataset.

--- a/notebooks/integrations/hugging-face/loading-model-from-hugging-face.ipynb
+++ b/notebooks/integrations/hugging-face/loading-model-from-hugging-face.ipynb
@@ -505,7 +505,7 @@
    "source": [
     "### Get blogs dataset\n",
     "Download:\n",
-    "- The example blogs dataset is located in [GitHub](https://github.com/radoondas/flask-elastic-nlp/blob/main/embeddings/blogs/blogs-no-embeddings.json.zip)\n",
+    "- The example blogs dataset is located in [GitHub](https://raw.githubusercontent.com/elastic/elasticsearch-labs/tree/main/notebooks/integrations/hugging-face/2023-07-27-blogs-no-embeddings.json.zip)\n",
     "\n",
     "Then unzip the file."
    ],
@@ -712,9 +712,9 @@
    "cell_type": "markdown",
    "source": [
     "### Query the dataset\n",
-    "The next step is to run a query to search for relevant blogs. The example query searches for `\"model_text\": \"when elasticsearch released vecor search\"` using the model we uploaded to Elasticsearch `sentence-transformers__msmarco-minilm-l-12-v3`.\n",
+    "The next step is to run a query to search for relevant blogs. The example query searches for `\"model_text\": \"how to do image similarity search\"` using the model we uploaded to Elasticsearch `sentence-transformers__all-minilm-l6-v2`.\n",
     "\n",
-    "The process is one query even it internaly consists of two tasks. One is to tramsform your search text into a vector using the NLP model and the second task is to run the vector search over the dataset.\n",
+    "The process is one query even it internally consists of two tasks. One is to transform your search text into a vector using the NLP model and the second task is to run the vector search over the dataset.\n",
     "\n",
     "```\n",
     "POST blogs/_search\n",
