Add reademes to notebook folders

--- a/notebooks/generative-ai/question-answering.ipynb
+++ b/notebooks/generative-ai/question-answering.ipynb
@@ -42,7 +42,7 @@
       },
       "outputs": [],
       "source": [
-        "!pip install -qU langchain jq openai elasticsearch tiktoken"
+        "!pip install -qU langchain jq openai elasticsearch"
       ]
     },
     {
