--- a/notebooks/generative-ai/chatbot.ipynb
+++ b/notebooks/generative-ai/chatbot.ipynb
@@ -46,95 +46,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "vscode": {
      "languageId": "shellscript"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting langchain==0.0.245\n",
-      "  Using cached langchain-0.0.245-py3-none-any.whl (1.4 MB)\n",
-      "Collecting jq\n",
-      "  Using cached jq-1.4.1-cp310-cp310-macosx_11_0_arm64.whl\n",
-      "Collecting openai\n",
-      "  Using cached openai-0.27.8-py3-none-any.whl (73 kB)\n",
-      "Collecting elasticsearch\n",
-      "  Using cached elasticsearch-8.9.0-py3-none-any.whl (395 kB)\n",
-      "Collecting tiktoken\n",
-      "  Using cached tiktoken-0.4.0-cp310-cp310-macosx_11_0_arm64.whl (761 kB)\n",
-      "Collecting PyYAML>=5.4.1\n",
-      "  Using cached PyYAML-6.0.1-cp310-cp310-macosx_11_0_arm64.whl (169 kB)\n",
-      "Collecting tenacity<9.0.0,>=8.1.0\n",
-      "  Using cached tenacity-8.2.2-py3-none-any.whl (24 kB)\n",
-      "Collecting numpy<2,>=1\n",
-      "  Using cached numpy-1.25.2-cp310-cp310-macosx_11_0_arm64.whl (14.0 MB)\n",
-      "Collecting pydantic<2,>=1\n",
-      "  Using cached pydantic-1.10.12-cp310-cp310-macosx_11_0_arm64.whl (2.5 MB)\n",
-      "Collecting aiohttp<4.0.0,>=3.8.3\n",
-      "  Using cached aiohttp-3.8.5-cp310-cp310-macosx_11_0_arm64.whl (343 kB)\n",
-      "Collecting langsmith<0.1.0,>=0.0.11\n",
-      "  Using cached langsmith-0.0.20-py3-none-any.whl (32 kB)\n",
-      "Collecting dataclasses-json<0.6.0,>=0.5.7\n",
-      "  Using cached dataclasses_json-0.5.14-py3-none-any.whl (26 kB)\n",
-      "Collecting numexpr<3.0.0,>=2.8.4\n",
-      "  Using cached numexpr-2.8.5-cp310-cp310-macosx_11_0_arm64.whl (90 kB)\n",
-      "Collecting requests<3,>=2\n",
-      "  Using cached requests-2.31.0-py3-none-any.whl (62 kB)\n",
-      "Collecting openapi-schema-pydantic<2.0,>=1.2\n",
-      "  Using cached openapi_schema_pydantic-1.2.4-py3-none-any.whl (90 kB)\n",
-      "Collecting SQLAlchemy<3,>=1.4\n",
-      "  Using cached SQLAlchemy-2.0.19-cp310-cp310-macosx_11_0_arm64.whl (2.0 MB)\n",
-      "Collecting async-timeout<5.0.0,>=4.0.0\n",
-      "  Using cached async_timeout-4.0.2-py3-none-any.whl (5.8 kB)\n",
-      "Collecting tqdm\n",
-      "  Downloading tqdm-4.66.0-py3-none-any.whl (78 kB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m78.1/78.1 kB\u001b[0m \u001b[31m2.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hCollecting elastic-transport<9,>=8\n",
-      "  Using cached elastic_transport-8.4.0-py3-none-any.whl (59 kB)\n",
-      "Collecting regex>=2022.1.18\n",
-      "  Downloading regex-2023.8.8-cp310-cp310-macosx_11_0_arm64.whl (289 kB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m289.3/289.3 kB\u001b[0m \u001b[31m5.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
-      "\u001b[?25hCollecting yarl<2.0,>=1.0\n",
-      "  Using cached yarl-1.9.2-cp310-cp310-macosx_11_0_arm64.whl (62 kB)\n",
-      "Collecting attrs>=17.3.0\n",
-      "  Using cached attrs-23.1.0-py3-none-any.whl (61 kB)\n",
-      "Collecting frozenlist>=1.1.1\n",
-      "  Using cached frozenlist-1.4.0-cp310-cp310-macosx_11_0_arm64.whl (46 kB)\n",
-      "Collecting aiosignal>=1.1.2\n",
-      "  Using cached aiosignal-1.3.1-py3-none-any.whl (7.6 kB)\n",
-      "Collecting charset-normalizer<4.0,>=2.0\n",
-      "  Using cached charset_normalizer-3.2.0-cp310-cp310-macosx_11_0_arm64.whl (124 kB)\n",
-      "Collecting multidict<7.0,>=4.5\n",
-      "  Using cached multidict-6.0.4-cp310-cp310-macosx_11_0_arm64.whl (29 kB)\n",
-      "Collecting marshmallow<4.0.0,>=3.18.0\n",
-      "  Using cached marshmallow-3.20.1-py3-none-any.whl (49 kB)\n",
-      "Collecting typing-inspect<1,>=0.4.0\n",
-      "  Using cached typing_inspect-0.9.0-py3-none-any.whl (8.8 kB)\n",
-      "Collecting urllib3<2,>=1.26.2\n",
-      "  Using cached urllib3-1.26.16-py2.py3-none-any.whl (143 kB)\n",
-      "Collecting certifi\n",
-      "  Using cached certifi-2023.7.22-py3-none-any.whl (158 kB)\n",
-      "Collecting typing-extensions>=4.2.0\n",
-      "  Using cached typing_extensions-4.7.1-py3-none-any.whl (33 kB)\n",
-      "Collecting idna<4,>=2.5\n",
-      "  Using cached idna-3.4-py3-none-any.whl (61 kB)\n",
-      "Requirement already satisfied: packaging>=17.0 in /Users/demjened/workspace/elasticsearch-labs/.venv/lib/python3.10/site-packages (from marshmallow<4.0.0,>=3.18.0->dataclasses-json<0.6.0,>=0.5.7->langchain==0.0.245) (23.1)\n",
-      "Collecting mypy-extensions>=0.3.0\n",
-      "  Using cached mypy_extensions-1.0.0-py3-none-any.whl (4.7 kB)\n",
-      "Installing collected packages: urllib3, typing-extensions, tqdm, tenacity, regex, PyYAML, numpy, mypy-extensions, multidict, marshmallow, jq, idna, frozenlist, charset-normalizer, certifi, attrs, async-timeout, yarl, typing-inspect, SQLAlchemy, requests, pydantic, numexpr, elastic-transport, aiosignal, tiktoken, openapi-schema-pydantic, langsmith, elasticsearch, dataclasses-json, aiohttp, openai, langchain\n",
-      "Successfully installed PyYAML-6.0.1 SQLAlchemy-2.0.19 aiohttp-3.8.5 aiosignal-1.3.1 async-timeout-4.0.2 attrs-23.1.0 certifi-2023.7.22 charset-normalizer-3.2.0 dataclasses-json-0.5.14 elastic-transport-8.4.0 elasticsearch-8.9.0 frozenlist-1.4.0 idna-3.4 jq-1.4.1 langchain-0.0.245 langsmith-0.0.20 marshmallow-3.20.1 multidict-6.0.4 mypy-extensions-1.0.0 numexpr-2.8.5 numpy-1.25.2 openai-0.27.8 openapi-schema-pydantic-1.2.4 pydantic-1.10.12 regex-2023.8.8 requests-2.31.0 tenacity-8.2.2 tiktoken-0.4.0 tqdm-4.66.0 typing-extensions-4.7.1 typing-inspect-0.9.0 urllib3-1.26.16 yarl-1.9.2\n",
-      "\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip available: \u001b[0m\u001b[31;49m22.3.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m23.2.1\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%pip install -U langchain==0.0.245 jq openai elasticsearch tiktoken"
    ]
@@ -150,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -207,20 +125,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "ObjectApiResponse({'acknowledged': True, 'shards_acknowledged': True, 'index': 'workplace_docs'})"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "mappings = {\n",
     "    \"properties\": {\n",
@@ -251,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -437,11 +344,11 @@
       "ANSWER:    NASA stands for North America South America. \n",
       "SUPPORTING DOCUMENTS:  ['Sales Organization Overview', 'Code Of Conduct', 'Code Of Conduct', 'Swe Career Matrix']\n",
       "QUESTION:  Which countries are part of it? \n",
-      "ANSWER:    The countries in the North America South America region are the United States, Canada, Mexico, as well as Central and South America. \n",
+      "ANSWER:    The North America South America region includes the United States, Canada, Mexico, as well as Central and South America. \n",
       "SUPPORTING DOCUMENTS:  ['Sales Organization Overview', 'Sales Organization Overview', 'Sales Organization Overview', 'Fy2024 Company Sales Strategy']\n",
       "QUESTION:  Who are the team's leads? \n",
-      "ANSWER:    The leads of the North America South America (NASA) team are Laura Martinez (Area Vice-President of North America) and Gary Johnson (Area Vice-President of South America). \n",
-      "SUPPORTING DOCUMENTS:  ['Sales Organization Overview', 'Sales Organization Overview', 'Sales Organization Overview', 'Swe Career Matrix']\n"
+      "ANSWER:    Laura Martinez is the Area Vice-President of North America, and Gary Johnson is the Area Vice-President of South America. \n",
+      "SUPPORTING DOCUMENTS:  ['Sales Organization Overview', 'Sales Organization Overview', 'Swe Career Matrix', 'Swe Career Matrix']\n"
      ]
     }
    ],
@@ -480,23 +387,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NotFoundError",
-     "evalue": "NotFoundError(404, 'index_not_found_exception', 'no such index [workplace-docs]', workplace-docs, index_or_alias)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNotFoundError\u001b[0m                             Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[63], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m elasticsearch_client\u001b[39m.\u001b[39;49mindices\u001b[39m.\u001b[39;49mdelete(index\u001b[39m=\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39mworkplace-docs\u001b[39;49m\u001b[39m'\u001b[39;49m)\n",
-      "File \u001b[0;32m~/workspace/elasticsearch-labs/.venv/lib/python3.10/site-packages/elasticsearch/_sync/client/utils.py:414\u001b[0m, in \u001b[0;36m_rewrite_parameters.<locals>.wrapper.<locals>.wrapped\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    411\u001b[0m         \u001b[39mexcept\u001b[39;00m \u001b[39mKeyError\u001b[39;00m:\n\u001b[1;32m    412\u001b[0m             \u001b[39mpass\u001b[39;00m\n\u001b[0;32m--> 414\u001b[0m \u001b[39mreturn\u001b[39;00m api(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n",
-      "File \u001b[0;32m~/workspace/elasticsearch-labs/.venv/lib/python3.10/site-packages/elasticsearch/_sync/client/indices.py:690\u001b[0m, in \u001b[0;36mIndicesClient.delete\u001b[0;34m(self, index, allow_no_indices, error_trace, expand_wildcards, filter_path, human, ignore_unavailable, master_timeout, pretty, timeout)\u001b[0m\n\u001b[1;32m    688\u001b[0m     __query[\u001b[39m\"\u001b[39m\u001b[39mtimeout\u001b[39m\u001b[39m\"\u001b[39m] \u001b[39m=\u001b[39m timeout\n\u001b[1;32m    689\u001b[0m __headers \u001b[39m=\u001b[39m {\u001b[39m\"\u001b[39m\u001b[39maccept\u001b[39m\u001b[39m\"\u001b[39m: \u001b[39m\"\u001b[39m\u001b[39mapplication/json\u001b[39m\u001b[39m\"\u001b[39m}\n\u001b[0;32m--> 690\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mperform_request(  \u001b[39m# type: ignore[return-value]\u001b[39;49;00m\n\u001b[1;32m    691\u001b[0m     \u001b[39m\"\u001b[39;49m\u001b[39mDELETE\u001b[39;49m\u001b[39m\"\u001b[39;49m, __path, params\u001b[39m=\u001b[39;49m__query, headers\u001b[39m=\u001b[39;49m__headers\n\u001b[1;32m    692\u001b[0m )\n",
-      "File \u001b[0;32m~/workspace/elasticsearch-labs/.venv/lib/python3.10/site-packages/elasticsearch/_sync/client/_base.py:389\u001b[0m, in \u001b[0;36mNamespacedClient.perform_request\u001b[0;34m(self, method, path, params, headers, body)\u001b[0m\n\u001b[1;32m    378\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mperform_request\u001b[39m(\n\u001b[1;32m    379\u001b[0m     \u001b[39mself\u001b[39m,\n\u001b[1;32m    380\u001b[0m     method: \u001b[39mstr\u001b[39m,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    387\u001b[0m     \u001b[39m# Use the internal clients .perform_request() implementation\u001b[39;00m\n\u001b[1;32m    388\u001b[0m     \u001b[39m# so we take advantage of their transport options.\u001b[39;00m\n\u001b[0;32m--> 389\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_client\u001b[39m.\u001b[39;49mperform_request(\n\u001b[1;32m    390\u001b[0m         method, path, params\u001b[39m=\u001b[39;49mparams, headers\u001b[39m=\u001b[39;49mheaders, body\u001b[39m=\u001b[39;49mbody\n\u001b[1;32m    391\u001b[0m     )\n",
-      "File \u001b[0;32m~/workspace/elasticsearch-labs/.venv/lib/python3.10/site-packages/elasticsearch/_sync/client/_base.py:320\u001b[0m, in \u001b[0;36mBaseClient.perform_request\u001b[0;34m(self, method, path, params, headers, body)\u001b[0m\n\u001b[1;32m    317\u001b[0m         \u001b[39mexcept\u001b[39;00m (\u001b[39mValueError\u001b[39;00m, \u001b[39mKeyError\u001b[39;00m, \u001b[39mTypeError\u001b[39;00m):\n\u001b[1;32m    318\u001b[0m             \u001b[39mpass\u001b[39;00m\n\u001b[0;32m--> 320\u001b[0m     \u001b[39mraise\u001b[39;00m HTTP_EXCEPTIONS\u001b[39m.\u001b[39mget(meta\u001b[39m.\u001b[39mstatus, ApiError)(\n\u001b[1;32m    321\u001b[0m         message\u001b[39m=\u001b[39mmessage, meta\u001b[39m=\u001b[39mmeta, body\u001b[39m=\u001b[39mresp_body\n\u001b[1;32m    322\u001b[0m     )\n\u001b[1;32m    324\u001b[0m \u001b[39m# 'X-Elastic-Product: Elasticsearch' should be on every 2XX response.\u001b[39;00m\n\u001b[1;32m    325\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_verified_elasticsearch:\n\u001b[1;32m    326\u001b[0m     \u001b[39m# If the header is set we mark the server as verified.\u001b[39;00m\n",
-      "\u001b[0;31mNotFoundError\u001b[0m: NotFoundError(404, 'index_not_found_exception', 'no such index [workplace-docs]', workplace-docs, index_or_alias)"
-     ]
+     "data": {
+      "text/plain": [
+       "ObjectApiResponse({'acknowledged': True})"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
