Add Open in Colab button

--- a/notebooks/generative-ai/chatbot.ipynb
+++ b/notebooks/generative-ai/chatbot.ipynb
@@ -6,6 +6,8 @@
    "source": [
     "# Chatbot with LangChain conversational chain and OpenAI 🤖💬\n",
     "\n",
+    "<a target=\"_blank\" href=\"https://colab.research.google.com/github/elastic/elasticsearch-labs/blob/main/notebooks/generative-ai/chatbot.ipynb\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>\n",
+    "\n",
     "In this notebook we'll build a chatbot that can respond to questions about custom data, such as policies of an employer.\n",
     "\n",
     "The chatbot uses LangChain's `ConversationalRetrievalChain` and has the following capabilities:\n",
