--- a/notebooks/generative-ai/chatbot.ipynb
+++ b/notebooks/generative-ai/chatbot.ipynb
@@ -25,7 +25,7 @@
     "For this example, you will need:\n",
     "\n",
     "- Python 3.6 or later\n",
-    "- An Elastic deployment with minimum **2GB machine learning node**\n",
+    "- An Elastic deployment\n",
     "  - We'll be using [Elastic Cloud](https://www.elastic.co/guide/en/cloud/current/ec-getting-started.html) for this example (available with a [free trial](https://cloud.elastic.co/registration))\n",
     "- OpenAI account\n",
     "\n",
@@ -33,8 +33,7 @@
     "\n",
     "If you don't have an Elastic Cloud deployment, follow these steps to create one.\n",
     "1. Go to https://cloud.elastic.co/registration and sign up for a free trial\n",
-    "2. Select **Create Deployment**\n",
-    "3. Add a 2GB machine learning node to the deployment"
+    "2. Select **Create Deployment** and follow the instructions"
    ]
   },
   {
@@ -56,7 +55,7 @@
    },
    "outputs": [],
    "source": [
-    "%pip install -U langchain==0.0.245 jq openai elasticsearch tiktoken"
+    "%pip install -U langchain==0.0.245 openai elasticsearch"
    ]
   },
   {
@@ -91,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +98,7 @@
      "output_type": "stream",
      "text": [
       "Connected to Elasticsearch\n",
-      " {'name': 'instance-0000000001', 'cluster_name': 'c8c1f5348a8647989c409f4090d2d6f4', 'cluster_uuid': 'X3GD-4JrSK65K3RQCcBbSA', 'version': {'number': '8.10.0-SNAPSHOT', 'build_flavor': 'default', 'build_type': 'docker', 'build_hash': 'c26f88d66b60a8016e98b9b7ba7bae6c7c852213', 'build_date': '2023-08-04T11:42:34.579618687Z', 'build_snapshot': True, 'lucene_version': '9.7.0', 'minimum_wire_compatibility_version': '7.17.0', 'minimum_index_compatibility_version': '7.0.0'}, 'tagline': 'You Know, for Search'}\n"
+      " {'name': 'instance-0000000000', 'cluster_name': 'dacecbd336e6450d882c8adef9d131eb', 'cluster_uuid': 'PIWjifvgTcW7iV5zJmu0PA', 'version': {'number': '8.9.0', 'build_flavor': 'default', 'build_type': 'docker', 'build_hash': '8aa461beb06aa0417a231c345a1b8c38fb498a0d', 'build_date': '2023-07-19T14:43:58.555259655Z', 'build_snapshot': False, 'lucene_version': '9.7.0', 'minimum_wire_compatibility_version': '7.17.0', 'minimum_index_compatibility_version': '7.0.0'}, 'tagline': 'You Know, for Search'}\n"
      ]
     }
    ],
@@ -111,7 +110,7 @@
     "    basic_auth=(ELASTIC_USERNAME, ELASTIC_PASSWORD)\n",
     ")\n",
     "\n",
-    "print('Connected to Elasticsearch\\n', elasticsearch_client.info())"
+    "print(\"Connected to Elasticsearch\\n\", elasticsearch_client.info())"
    ]
   },
   {
@@ -144,7 +143,7 @@
     "}\n",
     "\n",
     "elasticsearch_client.indices.create(\n",
-    "    index='workplace-docs',\n",
+    "    index=\"workplace-docs\",\n",
     "    mappings=mappings\n",
     ")"
    ]
@@ -160,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -181,13 +180,15 @@
     "\n",
     "workplace_docs = json.loads(response.read())\n",
     "\n",
-    "print(f'Successfully loaded {len(workplace_docs)} documents')"
+    "print(f\"Successfully loaded {len(workplace_docs)} documents\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Chunk documents into passages 🪓\n",
+    "\n",
     "As we're chatting with our bot, it will run semantic searches on the index to find the relevant documents. In order for this to be accurate, we need to split the full documents into small chunks (also called passages). This way the semantic search will find the passage within a document that most likely answers our question.\n",
     "\n",
     "We'll use LangChain's `CharacterTextSplitter` and split the documents' text at 800 characters with some overlap between chunks."
@@ -195,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +269,7 @@
     "\n",
     "text_embeddings = embeddings.embed_documents(texts)\n",
     "\n",
-    "print(f'Generated {len(text_embeddings)} embeddings')\n",
+    "print(f\"Generated {len(text_embeddings)} embeddings\")\n",
     "\n",
     "# Persist the passage documents into Elasticsearch\n",
     "actions = []\n",
@@ -285,7 +286,7 @@
     "    index=\"workplace-docs\"\n",
     ")\n",
     "\n",
-    "print(f'Indexed {len(bulk_response[\"items\"])} documents')"
+    "print(f\"Indexed {len(bulk_response['items'])} documents\")"
    ]
   },
   {
@@ -299,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +376,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Try experimenting with other questions or after clearing the workplace data, and observe how the responses change."
+    "💡 _Try experimenting with other questions or after clearing the workplace data, and observe how the responses change._"
    ]
   },
   {
@@ -389,20 +390,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "ObjectApiResponse({'acknowledged': True})"
-      ]
-     },
-     "execution_count": 80,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "elasticsearch_client.indices.delete(index='workplace-docs')"
    ]
