--- a/notebooks/integrations/openai/openai-KNN-RAG.ipynb
+++ b/notebooks/integrations/openai/openai-KNN-RAG.ipynb
@@ -292,7 +292,7 @@
     "EMBEDDING_MODEL = \"text-embedding-ada-002\"\n",
     "\n",
     "# Define question\n",
-    "question = 'How wide is the Atlantic ocean?'\n",
+    "question = 'How big is the Atlantic ocean?'\n",
     "\n",
     "# Create embedding\n",
     "question_embedding = openai.Embedding.create(input=question, model=EMBEDDING_MODEL)\n"
