--- a/notebooks/integrations/openai/openai-KNN-RAG.ipynb
+++ b/notebooks/integrations/openai/openai-KNN-RAG.ipynb
@@ -394,7 +394,10 @@
     "  model=\"gpt-3.5-turbo\",\n",
     "  messages=[\n",
     "        {\"role\": \"system\", \"content\": \"You are a helpful assistant.\"},\n",
-    "        {\"role\": \"user\", \"content\": \"Answer the following question:\" + question + \"by using the following text:\" + top_hit_summary},\n",
+    "        {\"role\": \"user\", \"content\": \"Answer the following question:\" \n",
+    "         + question \n",
+    "         + \"by using the following text:\" \n",
+    "         + top_hit_summary},\n",
     "    ]\n",
     ")\n",
     "\n",
