Use consistent double quotes

--- a/notebooks/generative-ai/chatbot.ipynb
+++ b/notebooks/generative-ai/chatbot.ipynb
@@ -330,7 +330,7 @@
     "chat_history = ElasticsearchChatMessageHistory(\n",
     "    client=elasticsearch_client,\n",
     "    session_id=session_id,\n",
-    "    index='workplace-docs-chat-history'\n",
+    "    index=\"workplace-docs-chat-history\"\n",
     ")"
    ]
   },
